tests/reference/ast-line_continuation_03-8570dc1.stderr
syntax error: Newline is unexpected here
  --> tests/../integration_tests/line_continuation_03.f90:52:7
   |
52 |     i
   |       ^ 
